zlc/zl_parser.output
Terminals which are not used

   '@'
   '.'
   T_PTR_OP
   T_CONSTANT_DOUBLE
   T_STRUCT
   T_STRUCT_DEFINED
   T_ELLIPSIS
   T_STRING
   T_PARAM_SEPARATOR


State 332 conflicts: 1 shift/reduce


Grammar

    0 $accept: program_list $end

    1 program_list: program program_list
    2             | /* empty */

    3 program: declaration_statement
    4        | declaration_function

    5 statement_list: statement statement_list
    6               | /* empty */

    7 statement: compound_statement
    8          | expression_statement
    9          | buildin_statement
   10          | selection_statement
   11          | labeled_statement
   12          | jump_statement
   13          | declaration_statement
   14          | assembler_statement

   15 @1: /* empty */

   16 compound_statement: '{' @1 statement_list '}'

   17 assembler_statement: T_ASM assembler_command_list '}'

   18 assembler_command_list: assembler_command '\n' assembler_command_list
   19                       | labeled_statement assembler_command_list
   20                       | assembler_command

   21 assembler_command: T_GOTO T_LABEL
   22                  | T_OPERATOR operator_parameter ',' operator_parameter
   23                  | T_OPERATOR operator_parameter
   24                  | T_OPERATOR
   25                  | T_LABEL '(' assembler_argument_list ')'
   26                  | /* empty */

   27 assembler_argument_list: operator_parameter ',' assembler_argument_list
   28                        | operator_parameter
   29                        | /* empty */

   30 operator_parameter: T_REGISTER
   31                   | '[' T_REGISTER ']'
   32                   | T_CONSTANT_LONG

   33 expression_statement: ';'
   34                     | expression ';'

   35 buildin_statement: T_NOP ';'
   36                  | T_DBG_PRINT_REGS ';'
   37                  | T_BREAK ';'
   38                  | T_CONTINUE ';'
   39                  | T_BREAK T_CONSTANT_LONG ';'
   40                  | T_CONTINUE T_CONSTANT_LONG ';'
   41                  | T_RETURN ';'
   42                  | T_RETURN assignment_expression ';'

   43 @2: /* empty */

   44 selection_statement: T_IF '(' assignment_expression ')' @2 statement else_statement

   45 @3: /* empty */

   46 @4: /* empty */

   47 selection_statement: T_WHILE @3 '(' assignment_expression ')' @4 statement

   48 @5: /* empty */

   49 @6: /* empty */

   50 @7: /* empty */

   51 selection_statement: T_DO @5 statement T_WHILE @6 '(' assignment_expression ')' @7 ';'

   52 @8: /* empty */

   53 @9: /* empty */

   54 @10: /* empty */

   55 selection_statement: T_FOR '(' expression ';' @8 expression ';' @9 expression ')' @10 statement

   56 else_statement: /* empty */

   57 @11: /* empty */

   58 else_statement: T_ELSE @11 statement

   59 labeled_statement: T_LABEL ':'

   60 jump_statement: T_GOTO T_LABEL ';'

   61 declaration_function: T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' ';'
   62                     | T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'

   63 @12: /* empty */

   64 @13: /* empty */

   65 declaration_function: T_FUNCTION T_LABEL '(' @12 function_args ')' @13 compound_statement

   66 function_args: function_arg
   67              | function_arg ',' function_args
   68              | /* empty */

   69 @14: /* empty */

   70 function_arg: declaration_specifiers @14 declarator

   71 declaration_statement: declaration_specifiers ';'

   72 @15: /* empty */

   73 declaration_statement: declaration_specifiers @15 init_declarator_list ';'

   74 declaration_specifiers: type_specifier
   75                       | type_specifier declaration_specifiers

   76 init_declarator_list: init_declarator
   77                     | init_declarator_list ',' init_declarator

   78 init_declarator: declarator

   79 @16: /* empty */

   80 init_declarator: declarator '=' @16 initializer

   81 pointer: '*'
   82        | '*' pointer

   83 declarator: pointer direct_declarator
   84           | direct_declarator

   85 direct_declarator: T_LABEL
   86                  | direct_declarator '[' const_expr ']'
   87                  | direct_declarator '[' ']'
   88                  | '(' declarator ')'

   89 initializer: assignment_expression
   90            | '{' initializer_list '}'

   91 initializer_list: initializer

   92 @17: /* empty */

   93 initializer_list: initializer ',' @17 initializer_list

   94 type_specifier: T_VOID
   95               | T_CHAR
   96               | T_SHORT
   97               | T_INT
   98               | T_LONG
   99               | T_FLOAT
  100               | T_DOUBLE
  101               | T_SIGNED
  102               | T_UNSIGNED
  103               | T_EXTERN
  104               | T_VAR

  105 expression: assignment_expression
  106           | assignment_expression ',' expression

  107 argument_expression_list: /* empty */
  108                         | assignment_expression
  109                         | assignment_expression ',' argument_expression_list

  110 assignment_expression: expr
  111                      | unary_expression '=' assignment_expression
  112                      | unary_expression T_ADD_ASSIGN assignment_expression
  113                      | unary_expression T_SUB_ASSIGN assignment_expression
  114                      | unary_expression T_MUL_ASSIGN assignment_expression
  115                      | unary_expression T_DIV_ASSIGN assignment_expression
  116                      | unary_expression T_MOD_ASSIGN assignment_expression
  117                      | unary_expression T_SHL_ASSIGN assignment_expression
  118                      | unary_expression T_SHR_ASSIGN assignment_expression
  119                      | unary_expression T_AND_ASSIGN assignment_expression
  120                      | unary_expression T_XOR_ASSIGN assignment_expression
  121                      | unary_expression T_OR_ASSIGN assignment_expression

  122 unary_expression: T_LABEL
  123                 | unary_expression '[' assignment_expression ']'

  124 expr: T_CONSTANT_LONG
  125     | T_CONSTANT_STRING
  126     | '(' expr ')'
  127     | expr '+' expr
  128     | expr '-' expr
  129     | expr '*' expr
  130     | expr '/' expr
  131     | expr '|' expr
  132     | expr '&' expr
  133     | expr '%' expr
  134     | expr '^' expr
  135     | expr T_SHL expr
  136     | expr T_SHR expr
  137     | expr '>' expr
  138     | expr '<' expr
  139     | expr T_GE expr
  140     | expr T_LE expr
  141     | expr T_EQ expr
  142     | expr T_NE expr

  143 @18: /* empty */

  144 expr: expr T_OR @18 expr

  145 @19: /* empty */

  146 expr: expr T_AND @19 expr

  147 @20: /* empty */

  148 @21: /* empty */

  149 expr: expr '?' @20 expr ':' @21 expr
  150     | '~' expr
  151     | '!' expr
  152     | '+' expr
  153     | '-' expr
  154     | '&' unary_expression
  155     | '*' expr
  156     | unary_expression T_INC
  157     | unary_expression T_DEC
  158     | T_INC unary_expression
  159     | T_DEC unary_expression
  160     | T_LABEL '(' argument_expression_list ')'
  161     | unary_expression
  162     | T_SIZEOF '(' declaration_specifiers ')'

  163 @22: /* empty */

  164 expr: T_SIZEOF '(' @22 unary_expression ')'

  165 const_expr: T_CONSTANT_LONG
  166           | '(' const_expr ')'
  167           | const_expr '+' const_expr
  168           | const_expr '-' const_expr
  169           | const_expr '*' const_expr
  170           | const_expr '/' const_expr
  171           | const_expr '|' const_expr
  172           | const_expr '&' const_expr
  173           | const_expr '%' const_expr
  174           | const_expr '^' const_expr
  175           | const_expr T_SHL const_expr
  176           | const_expr T_SHR const_expr
  177           | const_expr '>' const_expr
  178           | const_expr '<' const_expr
  179           | const_expr T_GE const_expr
  180           | const_expr T_LE const_expr
  181           | const_expr T_EQ const_expr
  182           | const_expr T_NE const_expr
  183           | const_expr T_OR const_expr
  184           | const_expr T_AND const_expr
  185           | const_expr '?' const_expr ':' const_expr
  186           | '~' const_expr
  187           | '!' const_expr
  188           | '+' const_expr
  189           | '-' const_expr
  190           | T_SIZEOF '(' declaration_specifiers ')'

  191 @23: /* empty */

  192 const_expr: T_SIZEOF '(' @23 unary_expression ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 18
'!' (33) 151 187
'%' (37) 133 173
'&' (38) 132 154 172
'(' (40) 25 44 47 51 55 61 62 65 88 126 160 162 164 166 190 192
')' (41) 25 44 47 51 55 61 62 65 88 126 160 162 164 166 190 192
'*' (42) 81 82 129 155 169
'+' (43) 127 152 167 188
',' (44) 22 27 67 77 93 106 109
'-' (45) 128 153 168 189
'.' (46)
'/' (47) 130 170
':' (58) 59 149 185
';' (59) 33 34 35 36 37 38 39 40 41 42 51 55 60 61 62 71 73
'<' (60) 138 178
'=' (61) 80 111
'>' (62) 137 177
'?' (63) 149 185
'@' (64)
'[' (91) 31 86 87 123
']' (93) 31 86 87 123
'^' (94) 134 174
'{' (123) 16 90
'|' (124) 131 171
'}' (125) 16 17 90
'~' (126) 150 186
error (256)
T_AND_ASSIGN (258) 119
T_SUB_ASSIGN (259) 113
T_MUL_ASSIGN (260) 114
T_DIV_ASSIGN (261) 115
T_MOD_ASSIGN (262) 116
T_ADD_ASSIGN (263) 112
T_SHR_ASSIGN (264) 118
T_SHL_ASSIGN (265) 117
T_XOR_ASSIGN (266) 120
T_OR_ASSIGN (267) 121
T_OR (268) 144 183
T_AND (269) 146 184
T_NE (270) 142 182
T_EQ (271) 141 181
T_GE (272) 139 179
T_LE (273) 140 180
T_SHR (274) 136 176
T_SHL (275) 135 175
T_DEC (276) 157 159
T_INC (277) 156 158
T_POINTER (278)
T_MINUS (279)
T_PLUS (280)
T_IF (281) 44
T_ELSE (282) 58
T_PTR_OP (283)
T_WHILE (284) 47 51
T_DO (285) 51
T_BREAK (286) 37 39
T_CONTINUE (287) 38 40
T_FOR (288) 55
T_LABEL (289) 21 25 59 60 61 62 65 85 122 160
T_CONSTANT_DOUBLE (290)
T_CONSTANT_LONG (291) 32 39 40 61 62 124 165
T_CONSTANT_STRING (292) 62 125
T_VOID (293) 94
T_CHAR (294) 95
T_SHORT (295) 96
T_INT (296) 97
T_LONG (297) 98
T_FLOAT (298) 99
T_DOUBLE (299) 100
T_SIGNED (300) 101
T_UNSIGNED (301) 102
T_STRUCT (302)
T_STRUCT_DEFINED (303)
T_ELLIPSIS (304)
T_STRING (305)
T_EXTERN (306) 103
T_VAR (307) 104
T_IMPORT (308) 61 62
T_FROM (309) 62
T_GOTO (310) 21 60
T_SIZEOF (311) 162 164 190 192
T_RETURN (312) 41 42
T_REGISTER (313) 30 31
T_OPERATOR (314) 22 23 24
T_ASM (315) 17
T_PARAM_SEPARATOR (316)
T_NOP (317) 35
T_DBG_PRINT_REGS (318) 36
T_FUNCTION (319) 65


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
program_list (92)
    on left: 1 2, on right: 0 1
program (93)
    on left: 3 4, on right: 1
statement_list (94)
    on left: 5 6, on right: 5 16
statement (95)
    on left: 7 8 9 10 11 12 13 14, on right: 5 44 47 51 55 58
compound_statement (96)
    on left: 16, on right: 7 65
@1 (97)
    on left: 15, on right: 16
assembler_statement (98)
    on left: 17, on right: 14
assembler_command_list (99)
    on left: 18 19 20, on right: 17 18 19
assembler_command (100)
    on left: 21 22 23 24 25 26, on right: 18 20
assembler_argument_list (101)
    on left: 27 28 29, on right: 25 27
operator_parameter (102)
    on left: 30 31 32, on right: 22 23 27 28
expression_statement (103)
    on left: 33 34, on right: 8
buildin_statement (104)
    on left: 35 36 37 38 39 40 41 42, on right: 9
selection_statement (105)
    on left: 44 47 51 55, on right: 10
@2 (106)
    on left: 43, on right: 44
@3 (107)
    on left: 45, on right: 47
@4 (108)
    on left: 46, on right: 47
@5 (109)
    on left: 48, on right: 51
@6 (110)
    on left: 49, on right: 51
@7 (111)
    on left: 50, on right: 51
@8 (112)
    on left: 52, on right: 55
@9 (113)
    on left: 53, on right: 55
@10 (114)
    on left: 54, on right: 55
else_statement (115)
    on left: 56 58, on right: 44
@11 (116)
    on left: 57, on right: 58
labeled_statement (117)
    on left: 59, on right: 11 19
jump_statement (118)
    on left: 60, on right: 12
declaration_function (119)
    on left: 61 62 65, on right: 4
@12 (120)
    on left: 63, on right: 65
@13 (121)
    on left: 64, on right: 65
function_args (122)
    on left: 66 67 68, on right: 65 67
function_arg (123)
    on left: 70, on right: 66 67
@14 (124)
    on left: 69, on right: 70
declaration_statement (125)
    on left: 71 73, on right: 3 13
@15 (126)
    on left: 72, on right: 73
declaration_specifiers (127)
    on left: 74 75, on right: 70 71 73 75 162 190
init_declarator_list (128)
    on left: 76 77, on right: 73 77
init_declarator (129)
    on left: 78 80, on right: 76 77
@16 (130)
    on left: 79, on right: 80
pointer (131)
    on left: 81 82, on right: 82 83
declarator (132)
    on left: 83 84, on right: 70 78 80 88
direct_declarator (133)
    on left: 85 86 87 88, on right: 83 84 86 87
initializer (134)
    on left: 89 90, on right: 80 91 93
initializer_list (135)
    on left: 91 93, on right: 90 93
@17 (136)
    on left: 92, on right: 93
type_specifier (137)
    on left: 94 95 96 97 98 99 100 101 102 103 104,
    on right: 74 75
expression (138)
    on left: 105 106, on right: 34 55 106
argument_expression_list (139)
    on left: 107 108 109, on right: 109 160
assignment_expression (140)
    on left: 110 111 112 113 114 115 116 117 118 119 120 121,
    on right: 42 44 47 51 89 105 106 108 109 111 112 113 114 115 116
    117 118 119 120 121 123
unary_expression (141)
    on left: 122 123, on right: 111 112 113 114 115 116 117 118 119
    120 121 123 154 156 157 158 159 161 164 192
expr (142)
    on left: 124 125 126 127 128 129 130 131 132 133 134 135 136 137
    138 139 140 141 142 144 146 149 150 151 152 153 154 155 156 157
    158 159 160 161 162 164, on right: 110 126 127 128 129 130 131
    132 133 134 135 136 137 138 139 140 141 142 144 146 149 150 151
    152 153 155
@18 (143)
    on left: 143, on right: 144
@19 (144)
    on left: 145, on right: 146
@20 (145)
    on left: 147, on right: 149
@21 (146)
    on left: 148, on right: 149
@22 (147)
    on left: 163, on right: 164
const_expr (148)
    on left: 165 166 167 168 169 170 171 172 173 174 175 176 177 178
    179 180 181 182 183 184 185 186 187 188 189 190 192,
    on right: 86 166 167 168 169 170 171 172 173 174 175 176 177 178
    179 180 181 182 183 184 185 186 187 188 189
@23 (149)
    on left: 191, on right: 192


state 0

    0 $accept: . program_list $end
    1 program_list: . program program_list
    2             | .  [$end]
    3 program: . declaration_statement
    4        | . declaration_function
   61 declaration_function: . T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' ';'
   62                     | . T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'
   65                     | . T_FUNCTION T_LABEL '(' @12 function_args ')' @13 compound_statement
   71 declaration_statement: . declaration_specifiers ';'
   73                      | . declaration_specifiers @15 init_declarator_list ';'
   74 declaration_specifiers: . type_specifier
   75                       | . type_specifier declaration_specifiers
   94 type_specifier: . T_VOID
   95               | . T_CHAR
   96               | . T_SHORT
   97               | . T_INT
   98               | . T_LONG
   99               | . T_FLOAT
  100               | . T_DOUBLE
  101               | . T_SIGNED
  102               | . T_UNSIGNED
  103               | . T_EXTERN
  104               | . T_VAR

    T_VOID      shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_SHORT     shift, and go to state 3
    T_INT       shift, and go to state 4
    T_LONG      shift, and go to state 5
    T_FLOAT     shift, and go to state 6
    T_DOUBLE    shift, and go to state 7
    T_SIGNED    shift, and go to state 8
    T_UNSIGNED  shift, and go to state 9
    T_EXTERN    shift, and go to state 10
    T_VAR       shift, and go to state 11
    T_IMPORT    shift, and go to state 12
    T_FUNCTION  shift, and go to state 13

    $default  reduce using rule 2 (program_list)

    program_list            go to state 14
    program                 go to state 15
    declaration_function    go to state 16
    declaration_statement   go to state 17
    declaration_specifiers  go to state 18
    type_specifier          go to state 19


state 1

   94 type_specifier: T_VOID .

    $default  reduce using rule 94 (type_specifier)


state 2

   95 type_specifier: T_CHAR .

    $default  reduce using rule 95 (type_specifier)


state 3

   96 type_specifier: T_SHORT .

    $default  reduce using rule 96 (type_specifier)


state 4

   97 type_specifier: T_INT .

    $default  reduce using rule 97 (type_specifier)


state 5

   98 type_specifier: T_LONG .

    $default  reduce using rule 98 (type_specifier)


state 6

   99 type_specifier: T_FLOAT .

    $default  reduce using rule 99 (type_specifier)


state 7

  100 type_specifier: T_DOUBLE .

    $default  reduce using rule 100 (type_specifier)


state 8

  101 type_specifier: T_SIGNED .

    $default  reduce using rule 101 (type_specifier)


state 9

  102 type_specifier: T_UNSIGNED .

    $default  reduce using rule 102 (type_specifier)


state 10

  103 type_specifier: T_EXTERN .

    $default  reduce using rule 103 (type_specifier)


state 11

  104 type_specifier: T_VAR .

    $default  reduce using rule 104 (type_specifier)


state 12

   61 declaration_function: T_IMPORT . T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' ';'
   62                     | T_IMPORT . T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'

    T_CONSTANT_LONG  shift, and go to state 20


state 13

   65 declaration_function: T_FUNCTION . T_LABEL '(' @12 function_args ')' @13 compound_statement

    T_LABEL  shift, and go to state 21


state 14

    0 $accept: program_list . $end

    $end  shift, and go to state 22


state 15

    1 program_list: . program program_list
    1             | program . program_list
    2             | .  [$end]
    3 program: . declaration_statement
    4        | . declaration_function
   61 declaration_function: . T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' ';'
   62                     | . T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'
   65                     | . T_FUNCTION T_LABEL '(' @12 function_args ')' @13 compound_statement
   71 declaration_statement: . declaration_specifiers ';'
   73                      | . declaration_specifiers @15 init_declarator_list ';'
   74 declaration_specifiers: . type_specifier
   75                       | . type_specifier declaration_specifiers
   94 type_specifier: . T_VOID
   95               | . T_CHAR
   96               | . T_SHORT
   97               | . T_INT
   98               | . T_LONG
   99               | . T_FLOAT
  100               | . T_DOUBLE
  101               | . T_SIGNED
  102               | . T_UNSIGNED
  103               | . T_EXTERN
  104               | . T_VAR

    T_VOID      shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_SHORT     shift, and go to state 3
    T_INT       shift, and go to state 4
    T_LONG      shift, and go to state 5
    T_FLOAT     shift, and go to state 6
    T_DOUBLE    shift, and go to state 7
    T_SIGNED    shift, and go to state 8
    T_UNSIGNED  shift, and go to state 9
    T_EXTERN    shift, and go to state 10
    T_VAR       shift, and go to state 11
    T_IMPORT    shift, and go to state 12
    T_FUNCTION  shift, and go to state 13

    $default  reduce using rule 2 (program_list)

    program_list            go to state 23
    program                 go to state 15
    declaration_function    go to state 16
    declaration_statement   go to state 17
    declaration_specifiers  go to state 18
    type_specifier          go to state 19


state 16

    4 program: declaration_function .

    $default  reduce using rule 4 (program)


state 17

    3 program: declaration_statement .

    $default  reduce using rule 3 (program)


state 18

   71 declaration_statement: declaration_specifiers . ';'
   72 @15: .  ['*', T_LABEL, '(']
   73 declaration_statement: declaration_specifiers . @15 init_declarator_list ';'

    ';'  shift, and go to state 24

    $default  reduce using rule 72 (@15)

    @15  go to state 25


state 19

   74 declaration_specifiers: . type_specifier  ['*', T_LABEL, '(', ')', ';']
   74                       | type_specifier .  ['*', T_LABEL, '(', ')', ';']
   75                       | . type_specifier declaration_specifiers
   75                       | type_specifier . declaration_specifiers
   94 type_specifier: . T_VOID
   95               | . T_CHAR
   96               | . T_SHORT
   97               | . T_INT
   98               | . T_LONG
   99               | . T_FLOAT
  100               | . T_DOUBLE
  101               | . T_SIGNED
  102               | . T_UNSIGNED
  103               | . T_EXTERN
  104               | . T_VAR

    T_VOID      shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_SHORT     shift, and go to state 3
    T_INT       shift, and go to state 4
    T_LONG      shift, and go to state 5
    T_FLOAT     shift, and go to state 6
    T_DOUBLE    shift, and go to state 7
    T_SIGNED    shift, and go to state 8
    T_UNSIGNED  shift, and go to state 9
    T_EXTERN    shift, and go to state 10
    T_VAR       shift, and go to state 11

    $default  reduce using rule 74 (declaration_specifiers)

    declaration_specifiers  go to state 26
    type_specifier          go to state 19


state 20

   61 declaration_function: T_IMPORT T_CONSTANT_LONG . T_LABEL '(' T_CONSTANT_LONG ')' ';'
   62                     | T_IMPORT T_CONSTANT_LONG . T_LABEL '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'

    T_LABEL  shift, and go to state 27


state 21

   65 declaration_function: T_FUNCTION T_LABEL . '(' @12 function_args ')' @13 compound_statement

    '('  shift, and go to state 28


state 22

    0 $accept: program_list $end .

    $default  accept


state 23

    1 program_list: program program_list .

    $default  reduce using rule 1 (program_list)


state 24

   71 declaration_statement: declaration_specifiers ';' .

    $default  reduce using rule 71 (declaration_statement)


state 25

   73 declaration_statement: declaration_specifiers @15 . init_declarator_list ';'
   76 init_declarator_list: . init_declarator
   77                     | . init_declarator_list ',' init_declarator
   78 init_declarator: . declarator
   80                | . declarator '=' @16 initializer
   81 pointer: . '*'
   82        | . '*' pointer
   83 declarator: . pointer direct_declarator
   84           | . direct_declarator
   85 direct_declarator: . T_LABEL
   86                  | . direct_declarator '[' const_expr ']'
   87                  | . direct_declarator '[' ']'
   88                  | . '(' declarator ')'

    '*'      shift, and go to state 29
    T_LABEL  shift, and go to state 30
    '('      shift, and go to state 31

    init_declarator_list  go to state 32
    init_declarator       go to state 33
    pointer               go to state 34
    declarator            go to state 35
    direct_declarator     go to state 36


state 26

   75 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 75 (declaration_specifiers)


state 27

   61 declaration_function: T_IMPORT T_CONSTANT_LONG T_LABEL . '(' T_CONSTANT_LONG ')' ';'
   62                     | T_IMPORT T_CONSTANT_LONG T_LABEL . '(' T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'

    '('  shift, and go to state 37


state 28

   63 @12: .
   65 declaration_function: T_FUNCTION T_LABEL '(' . @12 function_args ')' @13 compound_statement

    $default  reduce using rule 63 (@12)

    @12  go to state 38


state 29

   81 pointer: . '*'  [T_LABEL, '(']
   81        | '*' .  [T_LABEL, '(']
   82        | . '*' pointer
   82        | '*' . pointer

    '*'  shift, and go to state 29

    $default  reduce using rule 81 (pointer)

    pointer  go to state 39


state 30

   85 direct_declarator: T_LABEL .

    $default  reduce using rule 85 (direct_declarator)


state 31

   81 pointer: . '*'
   82        | . '*' pointer
   83 declarator: . pointer direct_declarator
   84           | . direct_declarator
   85 direct_declarator: . T_LABEL
   86                  | . direct_declarator '[' const_expr ']'
   87                  | . direct_declarator '[' ']'
   88                  | . '(' declarator ')'
   88                  | '(' . declarator ')'

    '*'      shift, and go to state 29
    T_LABEL  shift, and go to state 30
    '('      shift, and go to state 31

    pointer            go to state 34
    declarator         go to state 40
    direct_declarator  go to state 36


state 32

   73 declaration_statement: declaration_specifiers @15 init_declarator_list . ';'
   77 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 41
    ';'  shift, and go to state 42


state 33

   76 init_declarator_list: init_declarator .

    $default  reduce using rule 76 (init_declarator_list)


state 34

   83 declarator: pointer . direct_declarator
   85 direct_declarator: . T_LABEL
   86                  | . direct_declarator '[' const_expr ']'
   87                  | . direct_declarator '[' ']'
   88                  | . '(' declarator ')'

    T_LABEL  shift, and go to state 30
    '('      shift, and go to state 31

    direct_declarator  go to state 43


state 35

   78 init_declarator: declarator .  [',', ';']
   80                | declarator . '=' @16 initializer

    '='  shift, and go to state 44

    $default  reduce using rule 78 (init_declarator)


state 36

   84 declarator: direct_declarator .  [',', '=', ')', ';']
   86 direct_declarator: direct_declarator . '[' const_expr ']'
   87                  | direct_declarator . '[' ']'

    '['  shift, and go to state 45

    $default  reduce using rule 84 (declarator)


state 37

   61 declaration_function: T_IMPORT T_CONSTANT_LONG T_LABEL '(' . T_CONSTANT_LONG ')' ';'
   62                     | T_IMPORT T_CONSTANT_LONG T_LABEL '(' . T_CONSTANT_LONG ')' T_FROM T_CONSTANT_STRING ';'

    T_CONSTANT_LONG  shift, and go to state 46


state 38

   65 declaration_function: T_FUNCTION T_LABEL '(' @12 . function_args ')' @13 compound_statement
   66 function_args: . function_arg
   67              | . function_arg ',' function_args
   68              | .  [')']
   70 function_arg: . declaration_specifiers @14 declarator
   74 declaration_specifiers: . type_specifier
   75                       | . type_specifier declaration_specifiers
   94 type_specifier: . T_VOID
   95               | . T_CHAR
   96               | . T_SHORT
   97               | . T_INT
   98               | . T_LONG
   99               | . T_FLOAT
  100               | . T_DOUBLE
  101               | . T_SIGNED
  102               | . T_UNSIGNED
  103               | . T_EXTERN
  104               | . T_VAR

    T_VOID      shift, and go to state 1
    T_CHAR      shift, and go to state 2
    T_SHORT     shift, and go to state 3
    T_INT       shift, and go to state 4
    T_LONG      shift, and go to state 5
    T_FLOAT     shift, and go to state 6
    T_DOUBLE    shift, and go to state 7
    T_SIGNED    shift, and go to state 8
    T_UNSIGNED  shift, and go to state 9
    T_EXTERN    shift, and go to state 10
    T_VAR       shift, and go to state 11

    $default  reduce using rule 68 (function_args)

    function_args           go to state 47
    function_arg            go to state 48
    declaration_specifiers  go to state 49
    type_specifier          go to state 19


state 39

   82 pointer: '*' pointer .

    $default  reduce using rule 82 (pointer)


state 40

   88 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 50


state 41

   77 init_declarator_list: init_declarator_list ',' . init_declarator
   78 init_declarator: . declarator
   80                | . declarator '=' @16 initializer
   81 pointer: . '*'
   82        | . '*' pointer
   83 declarator: . pointer direct_declarator
   84           | . direct_declarator
   85 direct_declarator: . T_LABEL
   86                  | . direct_declarator '[' const_expr ']'
   87                  | . direct_declarator '[' ']'
   88                  | . '(' declarator ')'

    '*'      shift, and go to state 29
    T_LABEL  shift, and go to state 30
    '('      shift, and go to state 31

    init_declarator    go to state 51
    pointer            go to state 34
    declarator         go to state 35
    direct_declarator  go to state 36


state 42

   73 declaration_statement: declaration_specifiers @15 init_declarator_list ';' .

    $default  reduce using rule 73 (declaration_statement)


state 43

   83 declarator: pointer direct_declarator .  [',', '=', ')', ';']
   86 direct_declarator: direct_declarator . '[' const_expr ']'
   87                  | direct_declarator . '[' ']'

    '['  shift, and go to state 45

    $default  reduce using rule 83 (declarator)


state 44

   79 @16: .
   80 init_declarator: declarator '=' . @16 initializer

    $default  reduce using rule 79 (@16)

    @16  go to state 52


state 45

   86 direct_declarator: direct_declarator '[' . const_expr ']'
   87                  | direct_declarator '[' . ']'
  165 const_expr: . T_CONSTANT_LONG
  166           | . '(' const_expr ')'
  167           | . const_expr '+' const_expr
  168           | . const_expr '-' const_expr
  169           | . const_expr '*' const_expr
  170           | . const_expr '/' const_expr
  171           | . const_expr '|' const_expr
  172           | . const_expr '&' const_expr
  173           | . const_expr '%' const_expr
  174           | . const_expr '^' const_expr
  175           | . const_expr T_SHL const_expr
  176           | . const_expr T_SHR const_expr
  177           | . const_expr '>' const_expr
  178           | . const_expr '<' const_expr
  179           | . const_expr T_GE const_expr
  180           | . const_expr T_LE const_expr
  181           | . const_expr T_EQ const_expr
  182           | . const_expr T_NE const_expr
  183           | . const_expr T_OR const_expr
  184           | . const_expr T_AND const_expr
  185           | . const_expr '?' const_expr ':' const_expr
  186           | . '~' const_expr
  187           | . '!' const_expr
  188           | . '+' const_expr
  189           | . '-' const_expr
  190           | . T_SIZEOF '(' declaration_specifiers ')'
  192           | . T_SIZEOF '(' @23 unary_expression ')'

    '+'              shift, and go to state 53
    '-'              shift, and go to state 54
    '!'              shift, and go to state 55
    '~'              shift, and go to state 56
    T_CONSTANT_LONG  shift, and go to state 57
    T_SIZEOF         shift, and go to state 58
    '('              shift, and go to state 59
    ']'              shift, and go to state 60

    const_expr  go to state 61


state 46

   61 declaration_function: T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG . ')' ';'
   62                     | T_IMPORT T_CONSTANT_LONG T_LABEL '(' T_CONSTANT_LONG . ')' T_FROM T_CONSTANT_STRING ';'

    ')'  shift, and go to state 62


state 47

   65 declaration_function: T_FUNCTION T_LABEL '(' @12 function_args . ')' @13 compound_statement

    ')'  shift, and go to state 63


state 48

   66 function_args: function_arg .  [')']
   67              | function_arg . ',' function_args

    ','  shift, and go to state 64

    $default  reduce using rule 66 (function_args)


state 49

   69 @14: .
   70 function_arg: declaration_specifiers . @14 declarator

    $default  reduce using rule 69 (@14)

    @14  go to state 65


state 50

   88 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 88 (direct_declarator)


state 51

   77 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 77 (init_declarator_list)


state 52

   80 init_declarator: declarator '=' @16 . initializer
   89 initializer: . assignment_expression
   90            | . '{' initializer_list '}'
  110 assignment_expression: . expr
  111                      | . unary_expression '=' assignment_expression
  112                      | . unary_expression T_ADD_ASSIGN assignment_expression
  113                      | . unary_expression T_SUB_ASSIGN assignment_expression
  114                      | . unary_expression T_MUL_ASSIGN assignment_expression
  115                      | . unary_expression T_DIV_ASSIGN assignment_expression
  116                      | . unary_expression T_MOD_ASSIGN assignment_expression
  117                      | . unary_expression T_SHL_ASSIGN assignment_expression
  118                      | . unary_expression T_SHR_ASSIGN assignment_expression
  119                      | . unary_expression T_AND_ASSIGN assignment_expression
  120                      | . unary_expression T_XOR_ASSIGN assignment_expression
  121                      | . unary_expression T_OR_ASSIGN assignment_expression
  122 unary_expression: . T_LABEL
  123                 | . unary_expression '[' assignment_expression ']'
  124 expr: . T_CONSTANT_LONG
  125     | . T_CONSTANT_STRING
  126     | . '(' expr ')'
  127     | . expr '+' expr
  128     | . expr '-' expr
  129     | . expr '*' expr
  130     | . expr '/' expr
  131     | . expr '|' expr
  132     | . expr '&' expr
  133     | . expr '%' expr
  134     | . expr '^' expr
  135     | . expr T_SHL expr
  136     | . expr T_SHR expr
  137     | . expr '>' expr
  138     | . expr '<' expr
  139     | . expr T_GE expr
  140     | . expr T_LE expr
  141     | . expr T_EQ expr
  142     | . expr T_NE expr
  144     | . expr T_OR @18 expr
  146     | . expr T_AND @19 expr
  149     | . expr '?' @20 expr ':' @21 expr
  150     | . '~' expr
  151     | . '!' expr
  152     | . '+' expr
  153     | . '-' expr
  154     | . '&' unary_expression
  155     | . '*' expr
  156     | . unary_expression T_INC
  157     | . unary_expression T_DEC
  158     | . T_INC unary_expression
  159     | . T_DEC unary_expression
  160     | . T_LABEL '(' argument_expression_list ')'
  161     | . unary_expression
  162     | . T_SIZEOF '(' declaration_specifiers ')'
  164     | . T_SIZEOF '(' @22 unary_expression ')'
